@@ -4,19 +4,20 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.List;
 
 public class FileWriteRunner {
 
 	public static void main(String[] args) throws IOException {
-		Path pathFileToWrite = Paths.get("./resources/file-write.txt");
+		Path pathFileToWrite = Paths.get(".d.2file-write.txt");
 		
 		List<String> list = 
-					List.of("Apple", "Boy", "Cat", "Dog", "Elephant");
-		
+					Arrays.asList("Apple", "Boy", "Cat", "D'kaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaddddddddddd og", "Elephant");
+
 		Files.write(pathFileToWrite, list);
-	
-		
+
+
 	}
 
 }
